# Crypto-Accelerator-HKUST

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Configurations/: 10-main.conf
RapidSV/: README.md  gsv.cu  gsv_wrapper.h
RapidSV/src/: gsv.cu
TASSL-acc/: .gitignore  Configure  Makefile  configdata.pm
TASSL-acc/Configurations/: 00-base-templates.conf
TASSL-acc/crypto/: ppccap.c
TASSL-acc/crypto/ec/: build.info  ec_err.c  ec_lib.c  ecp_sm2z256.c  ecp_sm2z256_table.c
TASSL-acc/crypto/include/internal/: sm2err.h
TASSL-acc/crypto/sm2/: sm2_sign.c
TASSL-acc/include/openssl/: ecerr.h
TASSL-acc/test/: sm2_benchmark_test.c
bak/RapidSV/: gsv_wrapper.h
crypto/ec/: ec_curve.c  ec_lcl.h
crypto/ec/asm/: ecp_sm2z256-x86_64.pl
crypto/err/: openssl.txt
crypto/include/internal/: sm2.h  sm3.h  sm4.h
crypto/sm2/: sm2_sign.c
include/internal/: refcount.h
test/: build.info
